--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node": ">=8.10"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "csurf": "^1.9.0",
     "docusign-esign": "^3.2.2",
     "ejs": "^2.5.8",
