--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
     "docusign-esign": "^3.2.2",
     "ejs": "^2.5.8",
@@ -33,12 +34,15 @@
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
+    "fs-extra": "^6.0.1",
     "helmet": "^3.12.0",
     "helmet-csp": "^2.7.0",
     "memorystore": "^1.6.0",
     "moment": "^2.22.0",
     "passport": "^0.4.0",
-    "passport-docusign": "^1.0.0"
+    "passport-docusign": "^1.0.0",
+    "path": "^0.12.7",
+    "validator": "^10.4.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
