--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "passport": "^0.4.0",
     "passport-docusign": "^1.0.0",
     "path": "^0.12.7",
+    "request": "^2.87.0",
+    "request-promise-native": "^1.0.5",
     "stream": "0.0.2",
     "validator": "^10.4.0"
   },
