--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "debug": "node  --inspect-brk index.js",
     "start": "node index.js",
-    "test": "mocha"
+    "test": "mocha",
+    "update-sources": "node lib/utilities/updateSources.js",
+    "update-sources-debug": "node --inspect-brk lib/utilities/updateSources.js"
+
   },
   "directories": {
     "test": "test"
@@ -36,6 +39,7 @@
     "fs": "0.0.1-security",
     "fs-extra": "^6.0.1",
     "helmet": "^3.15.0",
+    "jsonwebtoken": "^8.4.0",
     "memorystore": "^1.6.0",
     "moment": "^2.23.0",
     "passport": "^0.4.0",
