--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
-    "docusign-esign": "^4.2.1",
+    "docusign-esign": "4.4.0",
     "ejs": "^2.5.8",
     "express": "^4.16.4",
     "express-flash": "0.0.2",
