jwt settings + updated links

--- a/config/appsettings.json
+++ b/config/appsettings.json
@@ -3,6 +3,8 @@
   "dsClientSecret": "{CLIENT_SECRET}",
   "signerEmail": "{USER_EMAIL}",
   "signerName": "{USER_FULLNAME}",
+  "privateKey": "{DS_PRIVATE_KEY}",
+  "impersonatedUserGuid": "{DS_IMPERSONATED_USER_GUID}",
   "appUrl": "http://localhost:5000",
   "production": false,
   "debug": true,
@@ -15,7 +17,7 @@
   "gatewayAccountId": "",
   "gatewayName": "stripe",
   "gatewayDisplayName": "Stripe",
-  "githubExampleUrl": "https://github.com/docusign/eg-03-node-auth-code-grant/tree/master/lib/examples/",
+  "githubExampleUrl": "https://github.com/docusign/code-examples-node/tree/master/lib/examples/",
   "documentation": null,
   "multiSourceChooser": false
 }
