--- a/config/appsettings.json
+++ b/config/appsettings.json
@@ -3,14 +3,14 @@
   "dsClientSecret": "{CLIENT_SECRET}",
   "signerEmail": "{USER_EMAIL}",
   "signerName": "{USER_FULLNAME}",
-  "privateKey": "{DS_PRIVATE_KEY}",
-  "impersonatedUserGuid": "{DS_IMPERSONATED_USER_GUID}",
+ 
   "appUrl": "http://localhost:5000",
   "production": false,
   "debug": true,
   "sessionSecret": "12345",
   "allowSilentAuthentication": true,
-  "targetAccountId": null,
+  "targetAccountId": false,
+  "impersonatedUserGuid": "{DS_IMPERSONATED_USER_GUID}",
   "demoDocPath": "demo_documents",
   "docDocx": "World_Wide_Corp_Battle_Plan_Trafalgar.docx",
   "docPdf": "World_Wide_Corp_lorem.pdf",
