refactor into single config setup

--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -1,6 +1,9 @@
 {
-  "dsClientId": "{CLIENT_ID}",
-  "dsClientSecret": "{CLIENT_SECRET}",
+  "dsClientId": "{INTEGRATION_KEY}",
+  "dsClientSecret": "{INTEGRATION_SECRET}",
+  "dsJWTClientId": "{JWT_INTEGRATION_KEY}",
+  "privateKeyLocation":  "private.key",
+  "impersonatedUserGuid": "{DS_IMPERSONATED_USER_GUID}",
   "signerEmail": "{USER_EMAIL}",
   "signerName": "{USER_FULLNAME}",
   "appUrl": "http://localhost:5000",
@@ -9,7 +12,6 @@
   "sessionSecret": "12345",
   "allowSilentAuthentication": true,
   "targetAccountId": false,
-  "impersonatedUserGuid": "{DS_IMPERSONATED_USER_GUID}",
   "demoDocPath": "demo_documents",
   "docDocx": "World_Wide_Corp_Battle_Plan_Trafalgar.docx",
   "docPdf": "World_Wide_Corp_lorem.pdf",
