--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -1,11 +1,11 @@
 {
-  "dsClientId": "{INTEGRATION_KEY}",
-  "dsClientSecret": "{INTEGRATION_SECRET}",
-  "dsJWTClientId": "{JWT_INTEGRATION_KEY}",
+  "dsClientId": "{INTEGRATION_KEY_AUTH_CODE}",
+  "dsClientSecret": "{SECRET_KEY}",
+  "dsJWTClientId": "{INTEGRATION_KEY_JWT}",
   "privateKeyLocation":  "private.key",
-  "impersonatedUserGuid": "{DS_IMPERSONATED_USER_GUID}",
-  "signerEmail": "{USER_EMAIL}",
-  "signerName": "{USER_FULLNAME}",
+  "impersonatedUserGuid": "{IMPERSONATED_USER_ID}",
+  "signerEmail": "{SIGNER_EMAIL}",
+  "signerName": "{SIGNER_EMAILAME",
   "appUrl": "http://localhost:5000",
   "production": false,
   "debug": true,
@@ -15,7 +15,7 @@
   "demoDocPath": "demo_documents",
   "docDocx": "World_Wide_Corp_Battle_Plan_Trafalgar.docx",
   "docPdf": "World_Wide_Corp_lorem.pdf",
-  "gatewayAccountId": "",
+  "gatewayAccountId": "{GATEWAY_ACCOUNT_ID}",
   "gatewayName": "stripe",
   "gatewayDisplayName": "Stripe",
   "githubExampleUrl": "https://github.com/docusign/code-examples-node/tree/master/lib/examples/",
