--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -5,7 +5,7 @@
   "privateKeyLocation":  "private.key",
   "impersonatedUserGuid": "{IMPERSONATED_USER_ID}",
   "signerEmail": "{SIGNER_EMAIL}",
-  "signerName": "{SIGNER_EMAILAME",
+  "signerName": "{SIGNER_NAME}",
   "appUrl": "http://localhost:5000",
   "production": false,
   "debug": true,
