Moving examples to eSignature to accommodate more APIs, adding support for quickstart bypass.

--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -20,5 +20,6 @@
   "gatewayDisplayName": "Stripe",
   "githubExampleUrl": "https://github.com/docusign/code-examples-node/tree/master/lib/examples/",
   "documentation": null,
-  "multiSourceChooser": false
+  "multiSourceChooser": false,
+  "quickstart" : {QUICKSTART_VALUE}
 }
