Fixing location of private.key in appsettings.example.json

--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -2,7 +2,7 @@
   "dsClientId": "{INTEGRATION_KEY_AUTH_CODE}",
   "dsClientSecret": "{SECRET_KEY}",
   "dsJWTClientId": "{INTEGRATION_KEY_JWT}",
-  "privateKeyLocation":  "private.key",
+  "privateKeyLocation":  "config/private.key",
   "impersonatedUserGuid": "{IMPERSONATED_USER_ID}",
   "signerEmail": "{SIGNER_EMAIL}",
   "signerName": "{SIGNER_NAME}",
