Rooms API NodeJS examples #1, #3

--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -20,5 +20,8 @@
   "gatewayDisplayName": "Stripe",
   "githubExampleUrl": "https://github.com/docusign/code-examples-node/tree/master/lib/examples/",
   "documentation": null,
-  "multiSourceChooser": false
+  "multiSourceChooser": false,
+  "examplesApi": "{rooms or ''}",
+  "roomsApiUrl": "https://demo.rooms.docusign.com",
+  "githubRoomsExampleUrl": "https://github.com/docusign/code-examples-node/tree/master/lib/rooms-examples/",
 }
