--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -15,12 +15,13 @@
   "demoDocPath": "demo_documents",
   "docDocx": "World_Wide_Corp_Battle_Plan_Trafalgar.docx",
   "docPdf": "World_Wide_Corp_lorem.pdf",
-  "gatewayAccountId": "",
+  "gatewayAccountId": "{GATEWAY_ACCOUNT_ID}",
   "gatewayName": "stripe",
   "gatewayDisplayName": "Stripe",
   "githubExampleUrl": "https://github.com/docusign/code-examples-node/tree/master/lib/examples/",
   "documentation": null,
   "multiSourceChooser": false,
+  "quickstart" : "{QUICKSTART_VALUE}",
   "examplesApi": "{rooms or ''}",
   "roomsApiUrl": "https://demo.rooms.docusign.com",
   "githubRoomsExampleUrl": "https://github.com/docusign/code-examples-node/tree/master/lib/rooms-examples/",
