Fixin appsettings.example.json

--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -1,11 +1,11 @@
 {
-  "dsClientId": "{INTEGRATION_KEY}",
-  "dsClientSecret": "{INTEGRATION_SECRET}",
-  "dsJWTClientId": "{JWT_INTEGRATION_KEY}",
-  "privateKeyLocation":  "private.key",
-  "impersonatedUserGuid": "{DS_IMPERSONATED_USER_GUID}",
-  "signerEmail": "{USER_EMAIL}",
-  "signerName": "{USER_FULLNAME}",
+  "dsClientId": "{INTEGRATION_KEY_AUTH_CODE}",
+  "dsClientSecret": "{SECRET_KEY}",
+  "dsJWTClientId": "{INTEGRATION_KEY_JWT}",
+  "privateKeyLocation":  "config/private.key",
+  "impersonatedUserGuid": "{IMPERSONATED_USER_ID}",
+  "signerEmail": "{SIGNER_EMAIL}",
+  "signerName": "{SIGNER_NAME}",
   "appUrl": "http://localhost:5000",
   "production": false,
   "debug": true,
@@ -24,5 +24,5 @@
   "quickstart" : "{QUICKSTART_VALUE}",
   "examplesApi": "{rooms or ''}",
   "roomsApiUrl": "https://demo.rooms.docusign.com",
-  "githubRoomsExampleUrl": "https://github.com/docusign/code-examples-node/tree/master/lib/rooms-examples/",
+  "githubRoomsExampleUrl": "https://github.com/docusign/code-examples-node/tree/master/lib/rooms-examples/"
 }
