--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -21,5 +21,8 @@
   "githubExampleUrl": "https://github.com/docusign/code-examples-node/tree/master/lib/examples/",
   "documentation": null,
   "multiSourceChooser": false,
-  "quickstart" : "{QUICKSTART_VALUE}"
+  "quickstart" : "{QUICKSTART_VALUE}",
+  "examplesApi": "{rooms or ''}",
+  "roomsApiUrl": "https://demo.rooms.docusign.com",
+  "githubRoomsExampleUrl": "https://github.com/docusign/code-examples-node/tree/master/lib/rooms-examples/"
 }
