--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -15,6 +15,7 @@
   "demoDocPath": "demo_documents",
   "docDocx": "World_Wide_Corp_Battle_Plan_Trafalgar.docx",
   "docPdf": "World_Wide_Corp_lorem.pdf",
+  "docTxt": "Welcome.txt",
   "gatewayAccountId": "{GATEWAY_ACCOUNT_ID}",
   "gatewayName": "stripe",
   "gatewayDisplayName": "Stripe",
