Node.js click examples  (#14)
* Add click examples and some refactoring of project

Co-authored-by: Karissa.Jacobsen <Karissa.Jacobsen@docusign.com>

--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -16,6 +16,7 @@
   "docDocx": "World_Wide_Corp_Battle_Plan_Trafalgar.docx",
   "docPdf": "World_Wide_Corp_lorem.pdf",
   "docTxt": "Welcome.txt",
+  "docTermsPdf": "Term_Of_Service.pdf",
   "gatewayAccountId": "{GATEWAY_ACCOUNT_ID}",
   "gatewayName": "stripe",
   "gatewayDisplayName": "Stripe",
@@ -23,7 +24,12 @@
   "documentation": null,
   "multiSourceChooser": false,
   "quickstart" : "{QUICKSTART_VALUE}",
-  "examplesApi": "{rooms or ''}",
+  "examplesApi": {
+    "isESignatureApi": true,
+    "isRoomsApi": false,
+    "isClickApi": false
+  },
   "roomsApiUrl": "https://demo.rooms.docusign.com",
+  "clickAPIUrl": "https://demo.docusign.net/clickapi",
   "githubRoomsExampleUrl": "https://github.com/docusign/code-examples-node/tree/master/lib/rooms-examples/"
 }
