--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.10.0",
+    "docusign-click": "^1.0.0-beta",
     "docusign-esign": "^5.7.0",
     "docusign-rooms": "1.0.0",
     "ejs": "^2.6.2",
