Adding Monitor API

--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -27,7 +27,8 @@
   "examplesApi": {
     "isESignatureApi": true,
     "isRoomsApi": false,
-    "isClickApi": false
+    "isClickApi": false,
+    "isMonitorApi": false
   },
   "roomsApiUrl": "https://demo.rooms.docusign.com",
   "clickAPIUrl": "https://demo.docusign.net/clickapi",
