Adding Monitor API and fixing links to source from launcher for eSignature API

--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -20,16 +20,16 @@
   "gatewayAccountId": "{GATEWAY_ACCOUNT_ID}",
   "gatewayName": "stripe",
   "gatewayDisplayName": "Stripe",
-  "githubExampleUrl": "https://github.com/docusign/code-examples-node/tree/master/lib/examples/",
+  "githubExampleUrl": "https://github.com/docusign/code-examples-node/tree/master/lib/",
   "documentation": null,
   "multiSourceChooser": false,
   "quickstart" : "{QUICKSTART_VALUE}",
   "examplesApi": {
     "isESignatureApi": true,
     "isRoomsApi": false,
-    "isClickApi": false
+    "isClickApi": false,
+    "isMonitorApi": false
   },
   "roomsApiUrl": "https://demo.rooms.docusign.com",
-  "clickAPIUrl": "https://demo.docusign.net/clickapi",
-  "githubRoomsExampleUrl": "https://github.com/docusign/code-examples-node/tree/master/lib/rooms-examples/"
+  "clickAPIUrl": "https://demo.docusign.net/clickapi"
 }
