--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.10.0",
-    "docusign-click": "^1.0.0-beta",
-    "docusign-esign": "5.9.0-rc1",
-    "docusign-monitor": "^1.0.1-alpha",
-    "docusign-rooms": "^1.0.1-rc1",
+    "docusign-click": "^1.0.0",
+    "docusign-esign": "5.10.0",
+    "docusign-monitor": "^1.0.0",
+    "docusign-rooms": "^1.1.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
