Added monitor api url to appsettings example

--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -31,5 +31,6 @@
     "isMonitorApi": false
   },
   "roomsApiUrl": "https://demo.rooms.docusign.com",
-  "clickAPIUrl": "https://demo.docusign.net/clickapi"
+  "clickAPIUrl": "https://demo.docusign.net/clickapi",
+  "monitorApiUrl": "https://lens-d.docusign.net"
 }
