Added admin api examples (#32)
Add Admin API examples

--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -28,9 +28,11 @@
     "isESignatureApi": true,
     "isRoomsApi": false,
     "isClickApi": false,
-    "isMonitorApi": false
+    "isMonitorApi": false,
+    "isAdminApi": false
   },
   "roomsApiUrl": "https://demo.rooms.docusign.com",
   "clickAPIUrl": "https://demo.docusign.net/clickapi",
+  "adminAPIUrl": "https://api-d.docusign.net/management",
   "monitorApiUrl": "https://lens-d.docusign.net"
 }
