--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.10.0",
-    "docusign-admin": "1.0.0-beta",
+    "docusign-admin": "1.0.0",
     "docusign-click": "^1.0.0",
-    "docusign-esign": "^5.11.0-rc1 ",
+    "docusign-esign": "5.12.0",
     "docusign-monitor": "^1.0.0",
     "docusign-rooms": "^1.1.0",
     "ejs": "^2.6.2",
