--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.10.0",
-    "docusign-admin": "1.0.0",
-    "docusign-click": "^1.0.0",
+    "docusign-admin": "1.0.1",
+    "docusign-click": "1.0.0",
     "docusign-esign": "5.12.0",
-    "docusign-monitor": "^1.0.0",
-    "docusign-rooms": "^1.1.0",
+    "docusign-monitor": "1.0.0",
+    "docusign-rooms": "1.1.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
@@ -45,16 +45,16 @@
     "jsonwebtoken": "^8.5.1",
     "memorystore": "^1.6.1",
     "moment": "^2.24.0",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.6.6",
     "passport": "^0.4.0",
     "passport-docusign": "^1.1.0",
     "path": "^0.12.7",
     "request": "^2.88.2",
     "stream": "0.0.2",
-    "validator": "^10.11.0"
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^7.1.0"
+    "mocha": "^9.1.3"
   }
 }
