Created the qucik_acg project

--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -24,6 +24,7 @@
   "documentation": null,
   "multiSourceChooser": false,
   "quickstart" : "{QUICKSTART_VALUE}",
+  "quickACG" : "{QUICKACG_VALUE}",
   "roomsApiUrl": "https://demo.rooms.docusign.com",
   "clickAPIUrl": "https://demo.docusign.net/clickapi",
   "adminAPIUrl": "https://api-d.docusign.net/management",
