--- a/quick_acg/package.json
+++ b/quick_acg/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "relocate": "[ ! -d 'node_modules' ] || (rm -rf ../node_modules && mv -f node_modules ../)",
-    "relocate_windows": "(if exist node_modules/ (cd ../ && remove-node-modules && move jwt_console_project/node_modules ./))",
+    "relocate_windows": "(if exist node_modules/ (cd ../ && remove-node-modules && move quick_acg/node_modules ./))",
     "start": "(npm run relocate --silent || npm run relocate_windows --silent) && node quickACG.js"
   },
   "author": "DocuSign, Inc",
