Acg manifest fix (#94)
* Updating version of EJS

* update examplesAPI.json

* fix filename

* fixes to use manifest for quick acg

* fixing weird homepage for quick acg

Co-authored-by: Inbar Gazit <inbar.gazit@docusign.com>
Co-authored-by: meihDS <70775251+meihDS@users.noreply.github.com>
Co-authored-by: Karissa Jacobsen <karissa.jacobsen@docusign.com>
Co-authored-by: Patrick Mackle <pimackle@ucdavis.edu>

--- a/quick_acg/package.json
+++ b/quick_acg/package.json
@@ -31,7 +31,8 @@
     "passport": "^0.4.0",
     "passport-docusign": "^1.1.0",
     "path": "^0.12.7",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "node-fetch": "2.6.7"
   },
   "devDependencies": {
     "chai": "^4.2.0",
