--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,10 @@ jobs:
         cache: 'npm'
         
     - name: Run clean install
-      run: npm ci
+      run: |
+        npm cache clean --force
+        npm cache verify
+        npm install
       
     - name: Run build
       run: npm run build --if-present
