--- a/quick_acg/package.json
+++ b/quick_acg/package.json
@@ -4,11 +4,10 @@
   "description": "DocuSign eSignature Code example using either Authorization Code Grant",
   "main": "quickACG.js",
   "scripts": {
-    "relocate": "run-script-os",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "relocate:mac": "[ ! -d 'node_modules' ] || (rm -rf ../node_modules && mv -f node_modules ../)",
-    "relocate:win32": "(if exist node_modules/ (cd ../ && remove-node-modules && move quick_acg/node_modules ./))",
-    "start": "npm run relocate && node quickACG.js"
+    "test": "run-script-os",
+    "test:win32": "(if exist node_modules/ (cd ../ && remove-node-modules && move quick_acg/node_modules ./))",
+    "test:default": "[ ! -d 'node_modules' ] || (rm -rf ../node_modules && mv -f node_modules ../)",
+    "start": "npm test && node quickACG.js"
   },
   "author": "DocuSign, Inc",
   "license": "MIT",
