--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,9 @@ jobs:
         npm cache clean --force
         npm cache verify
         npm install
+    
+    - name: Run linter
+      run: npm run lint
       
     - name: Run build
       run: npm run build --if-present
