--- a/config/appsettings.example.json
+++ b/config/appsettings.example.json
@@ -29,5 +29,6 @@
   "clickAPIUrl": "https://demo.docusign.net/clickapi",
   "adminAPIUrl": "https://api-d.docusign.net/management",
   "monitorApiUrl": "https://lens-d.docusign.net",
+  "maestroApiIrl": "https://demo.services.docusign.net/aow-manage/v1.0",
   "codeExamplesManifest": "https://raw.githubusercontent.com/docusign/code-examples-csharp/master/manifest/CodeExamplesManifest.json"
 }
