--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "docusign-admin": "^2.3.0",
     "docusign-click": "^2.2.0",
     "docusign-esign": "^6.4.0",
-    "docusign-maestro": "file:docusign-maestro-1.0.0-rc2.tgz",
+    "docusign-maestro": "^1.0.0-rc2",
     "docusign-monitor": "^2.1.0",
     "docusign-rooms": "^2.0.0",
     "ejs": "^3.1.9",
