--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "docusign-esign": "^6.4.0",
     "docusign-monitor": "^2.1.0",
     "docusign-rooms": "^2.0.0",
-    "docusign-webforms": "^1.0.2-rc11",
+    "docusign-webforms": "^1.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-flash": "0.0.2",
