--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "csurf": "^1.11.0",
     "docusign-admin": "^2.3.0",
     "docusign-click": "^2.2.0",
-    "docusign-esign": "^6.5.1",
+    "docusign-esign": "^6.6.0-rc2",
     "docusign-monitor": "^2.1.0",
     "docusign-rooms": "^2.0.0",
     "docusign-webforms": "^1.0.0",
