--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,10 +75,16 @@ steps:
     cp $(node_private_key.secureFilePath) code-examples-node-private/config/private.key
   displayName: 'place private.key'
 
-- task: CmdLine@2
-  inputs:
-    script: 'docker rm -f $(docker ps -a -q)' 
-  continueOnError: true
+- script: |
+    echo "Checking for running Docker containers..."
+    containers=$(docker ps -q)
+    if [ ! -z "$containers" ]; then
+      echo "Stopping running Docker containers..."
+      docker stop $(docker ps -q)
+    else
+      echo "No Docker containers are running."
+    fi
+  displayName: "check for running containers"
 
 - script: |
     docker system prune -a --force
