--- a/quick_acg/package.json
+++ b/quick_acg/package.json
@@ -15,6 +15,7 @@
     "node": ">=8.10"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
