--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "node": ">=8.10"
   },
   "dependencies": {
-    "axios": "^1.6.5",
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
@@ -40,30 +40,35 @@
     "docusign-monitor": "^2.1.0",
     "docusign-rooms": "^2.0.0",
     "docusign-webforms": "^1.0.0",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
     "express-flash": "0.0.2",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.0",
     "fs": "0.0.1-security",
-    "fs-extra": "^11.1.0",
+    "fs-extra": "^11.2.0",
     "helmet": "^3.23.3",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "memorystore": "^1.6.7",
-    "moment": "^2.29.4",
-    "node-fetch": "2.6.9",
-    "passport": "^0.5.3",
+    "moment": "^2.30.1",
+    "node-fetch": "2.7.0",
+    "passport": "^0.7.0",
     "passport-docusign": "^1.3.0",
     "path": "^0.12.7",
-    "request": "^2.88.2",
+    "store2": "^2.14.3",
     "stream": "0.0.2",
     "uuid": "^9.0.1",
-    "validator": "^13.9.0"
+    "validator": "^13.11.0"
   },
   "devDependencies": {
-    "chai": "^4.3.7",
+    "chai": "^4.4.1",
     "chai-exclude": "^2.1.0",
-    "eslint": "^8.25.0",
-    "eslint-config-standard": "^17.0.0",
-    "mocha": "^10.2.0"
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "mocha": "^10.4.0"
+  },
+  "overrides": {
+    "degenerator": "^5.0.1",
+    "pac-resolver": "^7.0.1",
+    "formidable": "^3.5.1"
   }
 }
