--- a/quick_acg/package.json
+++ b/quick_acg/package.json
@@ -18,26 +18,30 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
-    "docusign-esign": "^6.1.0",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
+    "docusign-esign": "^6.6.0-rc2",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
     "express-flash": "0.0.2",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.0",
     "fs": "0.0.1-security",
-    "fs-extra": "^11.1.0",
+    "fs-extra": "^11.2.0",
     "helmet": "^3.23.3",
     "memorystore": "^1.6.7",
     "moment": "^2.29.4",
-    "passport": "^0.6.0",
+    "passport": "^0.7.0",
     "passport-docusign": "^1.3.0",
     "path": "^0.12.7",
     "run-script-os": "^1.1.6",
     "remove-node-modules": "^1.7.6",
-    "validator": "^13.9.0",
-    "node-fetch": "2.6.9"
+    "validator": "^13.11.0",
+    "node-fetch": "2.7.0"
   },
   "devDependencies": {
-    "chai": "^4.3.7",
-    "mocha": "^10.2.0"
+    "chai": "^4.4.1",
+    "mocha": "^10.4.0"
+  },
+  "overrides": {
+    "pac-resolver": "^7.0.1",
+    "semver": "^7.5.4"
   }
 }
