--- a/jwt_console_project/package.json
+++ b/jwt_console_project/package.json
@@ -12,7 +12,7 @@
   "author": "DocuSign, Inc",
   "license": "ISC",
   "dependencies": {
-    "docusign-esign": "^6.6.0-rc2",
+    "docusign-esign": "^8.0.0",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
     "path": "^0.12.7",
