--- a/quick_acg/package.json
+++ b/quick_acg/package.json
@@ -15,11 +15,11 @@
     "node": ">=8.10"
   },
   "dependencies": {
-    "axios": "^1.6.5",
+    "axios": "^1.7.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
-    "docusign-esign": "^6.6.0-rc2",
+    "docusign-esign": "^8.0.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-flash": "0.0.2",
@@ -34,14 +34,15 @@
     "path": "^0.12.7",
     "run-script-os": "^1.1.6",
     "remove-node-modules": "^1.7.6",
-    "validator": "^13.11.0",
+    "validator": "^13.12.0",
     "node-fetch": "2.7.0"
   },
   "devDependencies": {
-    "chai": "^4.4.1",
-    "mocha": "^10.4.0"
+    "chai": "^4.5.0",
+    "mocha": "^10.7.0"
   },
   "overrides": {
+    "braces": "^3.0.3",
     "pac-resolver": "^7.0.1",
     "semver": "^7.5.4"
   }
