--- a/package.json
+++ b/package.json
@@ -29,22 +29,23 @@
     "node": ">=8.10"
   },
   "dependencies": {
-    "axios": "^1.9.0",
+    "@docusign/iam-sdk": "^1.0.0-beta.5",
+    "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
     "csurf": "^1.11.0",
     "docusign-admin": "^3.0.0",
     "docusign-click": "^2.2.0",
-    "docusign-monitor": "^3.0.0",
-    "docusign-rooms": "^3.0.0",
-    "docusign-webforms": "^2.0.0",
     "docusign-esign": "^8.4.0",
+    "docusign-monitor": "^2.1.0",
+    "docusign-rooms": "^2.0.0",
+    "docusign-webforms": "^2.1.0",
     "ejs": "^3.1.10",
-    "express": "^4.21.2",
+    "express": "^4.21.1",
     "express-flash": "0.0.2",
     "express-session": "^1.18.1",
     "fs": "0.0.1-security",
-    "fs-extra": "^11.3.0",
+    "fs-extra": "^11.2.0",
     "helmet": "^3.23.3",
     "jsonwebtoken": "^9.0.2",
     "memorystore": "^1.6.7",
@@ -53,10 +54,10 @@
     "passport": "^0.7.0",
     "passport-docusign": "^1.3.0",
     "path": "^0.12.7",
-    "store2": "^2.14.4",
+    "store2": "^2.14.3",
     "stream": "0.0.2",
-    "uuid": "^11.1.0",
-    "validator": "^13.15.0"
+    "uuid": "^11.0.2",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "chai": "^4.5.0",
